--- a/Python_project_1_DM_prediction.ipynb
+++ b/Python_project_1_DM_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e14e9709",
+   "id": "5592bbc1",
    "metadata": {},
    "source": [
     "# Diabetes health prediction\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0127429a",
+   "id": "11d3dc00",
    "metadata": {},
    "source": [
     "## Import libraries"
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3e63a45",
+   "id": "f2cffdfa",
    "metadata": {},
    "source": [
     "## Import data"
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f08853c",
+   "id": "f0625fbb",
    "metadata": {},
    "source": [
     "## Details of the data \n",
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3223ad93",
+   "id": "0db354f0",
    "metadata": {
     "scrolled": true
    },
@@ -640,7 +640,9 @@
    "cell_type": "code",
    "execution_count": 62,
    "id": "e19f2e3c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -683,13 +685,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "064c314b",
+   "cell_type": "markdown",
+   "id": "cec18166",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Visual exploration "
+    "## Visual exploration "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b658517c",
+   "metadata": {},
+   "source": [
+    "### Correlation with all variables"
    ]
   },
   {
@@ -697,7 +705,7 @@
    "execution_count": 64,
    "id": "d1f07cab",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -786,13 +794,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "18cd81f8",
+   "cell_type": "markdown",
+   "id": "bd13f5e3",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "##Correlation with diabetes"
+    "### Correlation with diabetes"
    ]
   },
   {
@@ -800,7 +806,7 @@
    "execution_count": 68,
    "id": "0adbf6eb",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1018,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "c7f528a5",
+   "id": "5e30c2c7",
    "metadata": {},
    "outputs": [
     {
@@ -1113,6 +1119,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "df0ffe60",
+   "metadata": {},
+   "source": [
+    "### Incidence of diabetes and prediabetes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 73,
    "id": "0b2ac3bf",
@@ -1141,10 +1155,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cde736aa",
+   "metadata": {},
+   "source": [
+    "### Distribution of variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 74,
    "id": "ee2d8dce",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1160,6 +1184,14 @@
    "source": [
     "dm_data.hist(figsize=(30,20))\n",
     "plt.savefig(\"variables_histogram.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6aec797",
+   "metadata": {},
+   "source": [
+    "### Association of Diabetes with variables - granular analysis"
    ]
   },
   {
@@ -2301,7 +2333,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "bfb194b8",
+   "id": "7ced55ad",
    "metadata": {},
    "outputs": [
     {
@@ -2479,6 +2511,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3a70e01d",
+   "metadata": {},
+   "source": [
+    "### Association of income and variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 139,
    "id": "6aa57f65",
@@ -2589,7 +2629,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "d998c4a2",
+   "id": "f8c1f081",
    "metadata": {
     "scrolled": false
    },
@@ -2627,7 +2667,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "b3ebf2e7",
+   "id": "22993298",
    "metadata": {},
    "outputs": [
     {
@@ -2663,7 +2703,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "3685d213",
+   "id": "bb0e9a7a",
    "metadata": {},
    "outputs": [
     {
